# long_term_project

./: CMakeLists.txt  README.md  package.xml
action/: DoTask.action  Task.action
cardboard_detection_task/: CMakeLists.txt  package.xml  setup.py
launch/: bringup_turtlebot_sim_config.launch  client_duct_test.launch  client_erratic_config.launch  client_fetch_config.launch  client_robot_config.launch  client_turtlebot_sim_config.launch  master_duct_test.launch  old_client_robot_config.launch  schedule_executor.launch  server_config.launch  test_task.launch
long_term_configs/: CMakeLists.txt  package.xml
long_term_deployment/: CMakeLists.txt  setup.py
long_term_tasks/: CMakeLists.txt  package.xml
maps/: default.yaml  hand_stitched_graf.pgm  hand_stitched_graf.yaml
monitoring_tasks/: CMakeLists.txt  package.xml  setup.py
msg/: AgentDescription.msg  AgentStatus.msg  ConstrainedTask.msg  ScheduledTask.msg  Task.msg
navigation_tasks/: CMakeLists.txt  package.xml  setup.py
scripts/: .central_planner.py.swp  .terminal_interface.py.swp  central_planner.py  client.py  erratic_op_test.py  fetch_client.py  long_term_server.py  map_manager.py  path_distance_server.py  path_length_server.py  register_agent_client.py  register_agent_server.py  robot_command_parser.py  server.py  task_server.py  terminal_interface.py  test.py  test_path_logic.py  test_planner_turtlebot_sim.py  web_interface.py
srv/: ActiveTaskList.srv  AgentTaskList.srv  AssignSchedule.srv  GetPathLength.srv  GetRegisteredAgents.srv  GetTaskFromID.srv  QueueTask.srv  QueueTaskList.srv  RequestMap.srv  (+4 more)
(+90 files in other folders)
