<package>
  <name>long_term_tasks</name>
  <version>2.3.7</version>
  <description>
      long_term_tasks
  </description>

  <maintainer email="eriksenc@oregonstate.edu">Christopher Eriksen</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>long_term_deployment</run_depend>
  <run_depend>cardboard_detection_task</run_depend>
  <run_depend>monitoring_tasks</run_depend>
  <run_depend>navigation_tasks</run_depend>

  <export>
    <metapackage/> 
  </export>
</package>
